# mipt-comp-graph-hw1

./: CMakeLists.txt
task1/: task1
task2/: GreenFragmentShader.glsl  RedFragmentShader.glsl  VertexShader.glsl  task2  task2.cpp
task3/: task3  task3.cpp
task4/: task4  task4.cpp
